[gd_scene load_steps=8 format=3 uid="uid://da3vehbrq6dh"]

[ext_resource type="Script" uid="uid://b7lmhalhcswcu" path="res://scenes/devices/synthesizer/synthesizer.gd" id="1_0l478"]
[ext_resource type="PackedScene" uid="uid://br16li8wcmkjt" path="res://scenes/devices/extractor/increment_label.tscn" id="2_8hqn0"]
[ext_resource type="PackedScene" uid="uid://jtb6vci1054x" path="res://assets/models/synthesizor.blend" id="3_yb0cb"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_2lr34"]
height = 2.5517578
radius = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yb0cb"]
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gblqu"]
bg_color = Color(0, 0.36233068, 0.1914534, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="ViewportTexture" id="ViewportTexture_y1yj3"]
viewport_path = NodePath("SubViewport")

[node name="Synthesizer" type="Area3D" groups=["synthesizer"]]
script = ExtResource("1_0l478")
increment_label_scene = ExtResource("2_8hqn0")

[node name="Model" parent="." instance=ExtResource("3_yb0cb")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2758789, 0)
shape = SubResource("CylinderShape3D_2lr34")

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(200, 27)

[node name="Control" type="Control" parent="SubViewport"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ProgressBar" type="ProgressBar" parent="SubViewport/Control"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 10)
layout_mode = 0
offset_right = 100.0
offset_bottom = 27.0
theme_override_styles/background = SubResource("StyleBoxFlat_yb0cb")
theme_override_styles/fill = SubResource("StyleBoxFlat_gblqu")
max_value = 2.0
show_percentage = false

[node name="ProgressBarSprite" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7897215, 1)
billboard = 1
no_depth_test = true
texture = SubResource("ViewportTexture_y1yj3")

[node name="ThingieTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="WidgetTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="ThingieTimer" to="." method="_on_thingie_timer_timeout"]
[connection signal="timeout" from="WidgetTimer" to="." method="_on_widget_timer_timeout"]

[editable path="Model"]
